--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -10,7 +10,7 @@
 
 
       <div class="actions col-4 mx-auto mb-3">
-        <%= form.submit "Save", class: 'btn mt-3' %>
+        <%= form.submit "Save", class: 'btn btn-info mt-3' %>
       </div>
 
     <%end%>
