--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,20 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   background-color: rgba(241, 241, 241, 0.6);
+ } 
 
- a {
-    text-decoration: none;
+ .navbar{
+   background-color: #3778c2;
  }
+
+.btn-info,
+.btn-info:hover,
+.btn-info:active,
+.btn-info:visited,
+.btn-info:focus {
+    background-color: #3778c2;
+    border-color: #3778c2;
+}
  
