--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,23 @@
+<div class="pos-f-t">
+<div class="collapse" id="navbarToggleExternalContent">
+  <div class="bg-dark p-4">
+    <h4 class="text-white">Collapsed content</h4>
+    <span class="text-muted">Toggleable via the navbar brand.</span>
+  </div>
+</div>
+<div>
+<nav class="navbar navbar-light">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+ <span class="navbar-toggler-icon"></span>
+</button>
+<i class="bi bi-search text-light me-5"></i>
+</nav>
+<div class="d-flex justify-content-between p-3">
+<p>Welcome <%= current_user.name %></p>
+<%= link_to "Logout", destroy_user_session_path, class: "btn btn-info text-light" %>
+</div>
+</div>
+</div>
 <% @group.each do |g| %>
     <div class="d-flex justify-content-between ps-3 pe-5">
     <img src="<%= g.icon %>" alt="#" style="width:15%" class="mb-3" />
