--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -16,5 +16,5 @@
       </div>
       </div>
   <% end %>
-<%= link_to "Back Home", root_path, class: "btn btn-info text-light" %>
+<%= link_to "Back Home", groups_path, class: "btn btn-info text-light" %>
 </div>
