--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,19 @@
+<div class="pos-f-t">
+<div class="collapse" id="navbarToggleExternalContent">
+  <div class="bg-dark p-4">
+    <h4 class="text-white">Collapsed content</h4>
+    <span class="text-muted">Toggleable via the navbar brand.</span>
+  </div>
+</div>
+<div>
+<nav class="navbar navbar-light">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+ <span class="navbar-toggler-icon"></span>
+</button>
+<p>Transactions</p>
+<i class="bi bi-search text-light me-5"></i>
+</nav>
+</div>
 <div class = 'container pt-4 '>
   <% @group.each do |g| %> 
     <% if g.id == params[:id].to_i %>
@@ -33,4 +49,4 @@
     </div>
   </div>
 </div>
-<%= link_to "Back Home", root_path, class: "btn btn-info text-light w-100" %>
+<%= link_to "Back Home", groups_path, class: "btn btn-info text-light w-100" %>
