--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class = 'ht container pt-4 d-flex flex-column  align-items-center justify-contents-center  mt-5 splash' >
+<div class = 'col-10 pt-4 d-flex flex-column align-items-center justify-contents-center m-5 splash' >
   <h1 class = ' header pb-5 mb-5 pt-5 mt-5' > Money Manager </h1>
 
   <div class="d-flex flex-column w-50">
