--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h2 class="d-flex justify-content-center">Sign up</h2>
 
 <div class="w-75 m-auto">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)), data: { turbo: false } do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field mb-4">
